--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,39 @@
 /*  your css code here. If applicable */
+*{
+	margin:0;
+	padding:0;
+}
+
+body{
+	background-color:#000;
+	height:100vh;
+}
+
+#animal-photos{
+	padding:20px;
+	margin:0 auto;
+	width:70%;
+	background-color:gray;
+	height:100vh;
+	border-radius:15px;
+}
+
+#photo-heading{
+	text-align:center;
+	color:#fff;
+}
+.img{
+	padding:20px 0;
+	width:100%;
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+	justify-content:center;
+	align-items:center;
+	gap:20px;
+}
+
+.img img{
+	border-radius:15px;
+	width:30%;
+}
